unified_tests/pattern_matching/match_expression_missing_comma_between_arms/expect/build.text.stderr
lib.copp:5:9: error: expected ',' between match arms
          string => 2
          ^
